Reversed motor spinning direction in flight controller configuration - now spinning "props-out"

--- a/SPEEDYBEEF405.conf
+++ b/SPEEDYBEEF405.conf
@@ -29,6 +29,7 @@ rxfail 3 h
 set mag_hardware = NONE
 set baro_hardware = NONE
 set min_throttle = 1100
+set yaw_motors_reversed = ON
 set small_angle = 5
 set yaw_deadband = 10
 set pid_process_denom = 8
